# src/window-renderer/src/src/swagger.json
@@ -98,7 +98,7 @@
 					{
 						"description": "Optional: direction of glass opening ('OT_DX' or 'OT_SX')",
 						"in": "query",
-						"name": "glassType",
+						"name": "openingType",
 						"required": false,
 						"schema": {
 							"type": "string",
@@ -111,7 +111,7 @@
 					{
 						"description": "Optional: glass type ('GT_TRASPARENTE' or 'GT_OPACO')",
 						"in": "query",
-						"name": "openingType",
+						"name": "glassType",
 						"required": false,
 						"schema": {
 							"type": "string",
